
public class Guitar_GibsonLP implements GuitarBehavior {

	public void play() {
		System.out.println("Playing GibsonLP");
	}
}
