
public class Guitar_GibsonSG implements GuitarBehavior {

	public void play() {
		System.out.println("Playing GibsonSG");
	}
}

